# life-of-boids

./: README.md  conanfile.txt
.github/workflows/: main-cxx.yml  main-rust.yml
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/.ci/: before_script.sh  build.sh  install.sh  test.sh
cpp/cmake/: ClangFormatProcess.cmake
cpp/src/: CMakeLists.txt  main.cpp
cpp/tests/: CMakeLists.txt  first_test.cpp
